@@ -1,3 +1,9 @@
+1999-08-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* elf32-mips.c (_bfd_mips_elf_relocate_section): Tweak HI16/LO16
+	handling for REL relocations.  And only left-shift R_MIPS26
+	relocation addends where necessary.
+
 1999-08-03  Mark Mitchell  <mark@codesourcery.com>
 
 	* elf32-mips.c (mips_elf_next_lo16_addend): Rename to ...
